<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="90"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search_white_24dp"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/action_layout_view"
        android:orderInCategory="100"
        android:title="@string/action_view"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_view_module_24dp" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
