<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/note_view_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="5dp"
        android:layout_margin="@dimen/card_view_margin">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/note_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/note_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toStartOf="@+id/note_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/note_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ellipsize="marquee"
                android:maxLines="5"
                android:text="@string/note_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_header" />

            <ImageView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padd_10"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/share_note"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_menu_share" />

            <ImageView
                android:id="@+id/favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padd_10"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/favourite_note"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/share"
                app:srcCompat="@drawable/ic_favorite_border_black_24dp"
                />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/favourite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_content" />

            <TextView
                android:id="@+id/note_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/note_date"
                app:layout_constraintBottom_toBottomOf="@+id/note_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/note_header" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/note_view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layout_margin="@dimen/card_view_margin">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padd_10"
            app:srcCompat="@drawable/ic_delete_white_24dp"
            android:contentDescription="@string/delete_icon"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/padd_10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padd_10"
            android:layout_toLeftOf="@id/delete_icon"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textSize="13sp"
            android:layout_marginEnd="@dimen/padd_10"
            android:layout_toStartOf="@id/delete_icon" />

        <ImageView
            android:id="@+id/delete_icon_left"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padd_10"
            app:srcCompat="@drawable/ic_delete_white_24dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/padd_10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padd_10"
            android:layout_toRightOf="@id/delete_icon_left"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textSize="13sp"
            android:layout_marginStart="@dimen/padd_10"
            android:layout_toEndOf="@id/delete_icon_left" />

    </RelativeLayout>

</FrameLayout>